# climate-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_CACHE.md  CACHE_IMPLEMENTATION.md  CLAUDE.md  DOCKER.md  GEMINI.md  Justfile  README.md  TODO.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docker/: Dockerfile.cli  Dockerfile.webapp
plasma-widget/contents/config/: main.xml
plasma-widget/contents/ui/: FullRepresentation.qml  configGeneral.qml
plasmoid/: metadata.json
plasmoid/contents/ui/: CompactRepresentation.qml  DeviceDelegate.qml  FullRepresentation.qml  configGeneral.qml  main.qml
src/climate_hub/: __init__.py  __main__.py  logging_config.py
src/climate_hub/acfreedom/: control.py  coordinator.py  device.py  exceptions.py  manager.py
src/climate_hub/api/: __init__.py  client.py  constants.py  crypto.py  exceptions.py  models.py  protocol.py  types.py  websocket.py
src/climate_hub/cli/: commands.py  config.py  formatters.py  main.py
src/climate_hub/cli/tui/: app.py  widgets.py
src/climate_hub/mcp/: __init__.py  server.py
src/climate_hub/webapp/: background.py  dependencies.py  device_refresh.py  main.py  middleware.py  models.py  websocket.py
src/climate_hub/webapp/routes/: control.py  devices.py  health.py
src/climate_hub/webapp/static/css/: style.css
src/climate_hub/webapp/static/js/: dashboard.js
src/climate_hub/webapp/templates/: index.html
tests/unit/: test_config.py  test_control.py  test_manager.py
